--- a/src/app/weather-item/weather-item.component.html
+++ b/src/app/weather-item/weather-item.component.html
@@ -1,9 +1,9 @@
 <article class="weather-element">
   <div class="col-1">
-    <h3>Cityname</h3>
-    <p class="info">CLOUDS</p>
+    <h3>{{ weatherItem.cityName }}</h3>
+    <p class="info">{{ weatherItem.description }}</p>
   </div>
   <div class="col-2">
-    <span class="temperature">39 &deg;C</span>
+    <span class="temperature">{{ weatherItem.temperature }} &deg;C</span>
   </div>
 </article>
