--- a/src/app/weather-search/weather-search.component.html
+++ b/src/app/weather-search/weather-search.component.html
@@ -1,11 +1,10 @@
 <section class="weather-search">
   <form (ngSubmit)="onSubmit()">
-    <!--<form (ngSubmit)="onSubmit(f)" #f="ngModel">-->
     <label for="city">City</label>
-    <input name="location" type="text" id="city" required>
+    <input [(ngModel)]="location" name="location" type="text" id="city" (input) = "onSearchLocation(input.value)" #input required>
     <button type="submit">Add City</button>
   </form>
   <div>
-    <span class="info">City found: </span> City name
+    <span class="info">City found: </span> {{data.name}}
   </div>
 </section>
