--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <h3>Saved profiles</h3>
 <button (click)="onSaveNew()">Save List to Profile</button>
-<article class="profile">
-  <h4>Profile Name</h4>
-  <p>Cities: New York, London</p>
-  <span class="delete" (click)="onDeleteProfile($event)">X</span>
+<article class="profile" *ngFor="let profile of profiles">
+  <h4>{{ profile.profileName }}</h4>
+  <p>Cities: {{ profile.cities.join(',') }}</p>
+  <span class="delete" (click)="onDeleteProfile($event, profile)">X</span>
 </article>
