--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-3">Weather App</h1>
+        <p class="lead">Simple Weather App using Angular2 and free weather api</p>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-8">
